--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1>Hi! <strong>I'm Pauline</strong>, an astrophysicist<br />
-					turned data scientist. <br />
+					shifting toward data analytics. <br />
 					Welcome to my portfolio, where <br /> 
                                         you can see a little bit about the <br /> 
                                         different projects I've worked on.</h1>
@@ -45,34 +45,31 @@
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Google capstone project</h3>
-								<p>This is the capstone project for the Google Advanced Data Analytics professional certificate on Coursera. 
-								   It consists of the analysis of employee turnover at a fictitional company called Salifort Motors. </p>
+							<article class="col-6 col-12-xsmall">
+								<a href="google_capstone.html" class="image fit thumb" target="_blank"><img src="images/thumbs/googlecapstone.jpg" alt="" /></a>
+								<h3><a href="google_capstone.html" target='_blank'>Google capstone project</a></h3>
+								<p>This is the capstone project for the Google Advanced Data Analytics professional certificate on Coursera. It consists of the analysis of employee turnover at a fictitional company called Salifort Motors. 
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+							<article class="col-6 col-12-xsmall">
+								<a href="#" class="image fit thumb"><img src="images/thumbs/automatidata.jpg" alt="" /></a>
 								<h3>Google end-of-course project </h3>
-								<p>This is a compilation of the end-of-course projects from the individual courses in the Google 
-								   Advanced Data Analytics professional certificate on Coursera. It involves a fictitious consulting 
-								   company called Automatidata and a project to predict cab fares in NYC ahead of a ride. </p>
+								<p>This is a compilation of the end-of-course projects from the individual courses in the Google Advanced Data Analytics professional certificate on Coursera. It involves a fictitious consulting company called Automatidata and a project to predict cab fares in NYC ahead of a ride. </p>
 							</article>
 						</div>
 						<h2>Academic Work</h2>
 						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+							<article class="col-6 col-12-xsmall">
+								<a href="#" class="image fit thumb"><img src="images/thumbs/aatau-like.jpg" alt="" /></a>
 								<h3>Probing the inner disks of AA Tauri-like systems in NGC 2264 </h3>
 								<p>Summary.</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+							<article class="col-6 col-12-xsmall">
+								<a href="#" class="image fit thumb"><img src="images/thumbs/oi6300.jpg" alt="" /></a>
 								<h3>Ejection processes in the young open cluster NGC 2264 </h3>
 								<p>Summary.</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
+							<article class="col-6 col-12-xsmall">
+								<a href="#" class="image fit thumb"><img src="images/thumbs/obliquities.jpg" alt="" /></a>
 								<h3>The magnetic obliquity of accreting T Tauri stars </h3>
 								<p>Summary.</p>
 							</article>
@@ -84,10 +81,10 @@
 
 				<!-- Three -->
 					<section id="three">
-						<h2>Get In Touch</h2>
+						<h2>More</h2>  <!-- Previously called "Get In Touch" --> 
 						<p>   </p>
 						<div class="row">
-							<!--  <div class="col-8 col-12-small">
+							<!--  <div class="col-8 col-12-small">  
 								<form method="post" action="#">
 									<div class="row gtr-uniform gtr-50">
 										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
