--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<article class="col-6 col-12-xsmall">
 								<a href="google_capstone.html" class="image fit thumb" target="_blank"><img src="images/thumbs/googlecapstone.jpg" alt="" /></a>
 								<h3><a href="google_capstone.html" target='_blank'>Google capstone project</a></h3>
-								<p>This is the capstone project for the Google Advanced Data Analytics professional certificate on Coursera. It consists of the analysis of employee turnover at a fictitional company called Salifort Motors. 
+								<p>This is the capstone project for the Google Advanced Data Analytics professional certificate on Coursera. It consists of the analysis of employee turnover at a fictional company called Salifort Motors. 
 							</article>
 							<article class="col-6 col-12-xsmall">
 								<a href="#" class="image fit thumb"><img src="images/thumbs/automatidata.jpg" alt="" /></a>
