--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 								<p>This is the capstone project for the Google Advanced Data Analytics professional certificate on Coursera. It consists of the analysis of employee turnover at a fictional company called Salifort Motors. 
 							</article>
 							<article class="col-6 col-12-xsmall">
-								<a href="#" class="image fit thumb"><img src="images/thumbs/automatidata.jpg" alt="" /></a>
+								<a href="automatidata.html" class="image fit thumb"><img src="images/thumbs/automatidata.jpg" alt="" /></a>
 								<h3>Google end-of-course project </h3>
-								<p>This is a compilation of the end-of-course projects from the individual courses in the Google Advanced Data Analytics professional certificate on Coursera. It involves a fictitious consulting company called Automatidata and a project to predict cab fares in NYC ahead of a ride. </p>
+								<p>This is the end-of-course project from the fifth course in the Google Advanced Data Analytics professional certificate on Coursera, <i>Regression Analysis: Simplify Complex Data Relationships</i>. It involves a fictitious consulting company called Automatidata and a project to predict cab fares in NYC ahead of a ride. </p>
 							</article>
 						</div>
 						<h2>Academic Work</h2>
