--- a/index.html
+++ b/index.html
@@ -48,28 +48,28 @@
 							<article class="col-6 col-12-xsmall">
 								<a href="google_capstone.html" class="image fit thumb" target="_blank"><img src="images/thumbs/googlecapstone.jpg" alt="" /></a>
 								<h3><a href="google_capstone.html" target='_blank'>Google capstone project</a></h3>
-								<p>This is the capstone project for the Google Advanced Data Analytics professional certificate on Coursera. It consists of the analysis of employee turnover at a fictional company called Salifort Motors. 
+								<p>This is the capstone project for the Google Advanced Data Analytics professional certificate on Coursera. It consists of the analysis of employee turnover at a fictitional company called Salifort Motors. 
 							</article>
 							<article class="col-6 col-12-xsmall">
-								<a href="automatidata.html" class="image fit thumb"><img src="images/thumbs/automatidata.jpg" alt="" /></a>
-								<h3>Google end-of-course project </h3>
+								<a href="automatidata.html" class="image fit thumb" target="_blank"><img src="images/thumbs/automatidata.jpg" alt="" /></a>
+								<h3><a href="automatidata.html" target='_blank'>Google end-of-course project</a></h3>
 								<p>This is the end-of-course project from the fifth course in the Google Advanced Data Analytics professional certificate on Coursera, <i>Regression Analysis: Simplify Complex Data Relationships</i>. It involves a fictitious consulting company called Automatidata and a project to predict cab fares in NYC ahead of a ride. </p>
 							</article>
 						</div>
 						<h2>Academic Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall">
-								<a href="#" class="image fit thumb"><img src="images/thumbs/aatau-like.jpg" alt="" /></a>
+								<a href="aatau.html" class="image fit thumb" target="_blank"><img src="images/thumbs/aatau-like.jpg" alt="" /></a>
 								<h3>Probing the inner disks of AA Tauri-like systems in NGC 2264 </h3>
 								<p>Summary.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
-								<a href="#" class="image fit thumb"><img src="images/thumbs/oi6300.jpg" alt="" /></a>
+								<a href="ejection.html" class="image fit thumb" target="_blank"><img src="images/thumbs/oi6300.jpg" alt="" /></a>
 								<h3>Ejection processes in the young open cluster NGC 2264 </h3>
 								<p>Summary.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
-								<a href="#" class="image fit thumb"><img src="images/thumbs/obliquities.jpg" alt="" /></a>
+								<a href="obliquities.html" class="image fit thumb" target="_blank"><img src="images/thumbs/obliquities.jpg" alt="" /></a>
 								<h3>The magnetic obliquity of accreting T Tauri stars </h3>
 								<p>Summary.</p>
 							</article>
